update security cors and filter for testing